--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://svitlanapl.github.io/command-project",
+  "homepage": "https://RostyslavR.github.io/team-project-1",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /command-project/"
+    "build": "parcel build src/*.html --public-url /team-project-1/"
   },
   "repository": {
     "type": "git",
